<resources>
    <string name="app_name">Nourish</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <!-- Strings for login page  -->
    <string name="welcome_text_1">Welcome to our platform</string>
    <string name="welcome_text_2">please sign in to continue</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_register_page_1">Don\'t have account?</string>
    <string name="to_register_page_2">Register here !</string>

    <!-- Strings for sign up page -->
    <string name="register">Register</string>
    <string name="register_title_text">Let\'s Register</string>
    <string name="register_title_text_2">Please fill in this form to \ncreate an account</string>
    <string name="username">Username</string>
    <string name="to_login_page_1">Already have account?</string>
    <string name="to_login_page_2">Sign in!</string>

    <!-- Strings for login and register alert -->
    <string name="login_success_alert_title">Login success</string>
    <string name="login_error_alert_title">Login failed</string>
    <string name="success_alert_reply">Next</string>
    <string name="error_alert_reply">Repeat</string>
    <string name="signup_success_alert_title">Successfully create account</string>
    <string name="signup_error_alert_title">Failed to create account</string>

    <!-- Edit Text error message -->
    <string name="empty_input">This field cannot be empty</string>
    <string name="invalid_password">Password cannot be less than 8 characters</string>
    <string name="email_must_contain_at">Email must contain @</string>
    <string name="email_must_end_with_gmail_com">Email must end with "gmail.com"</string>

    <!-- Page title -->
    <string name="greet_user">Hello, %1$s</string>
    <string name="nourish_motto">Stay healthy</string>
    <string name="iv_nourish">Nourish Logo</string>
    <string name="child_icon">Child icon</string>

    <!-- Strings for home fragment -->
    <string name="features">Features</string>
    <string name="news">News</string>
    <string name="more_news">More News</string>
    <string name="empty_news">There is no news available</string>
    <string name="iv_news">News image</string>
    <string name="news_title">News Title</string>
    <string name="stunt">Stunt</string>
    <string name="food">Food</string>
    <string name="journal">Journal</string>
    <string name="find_out">Let\'s Find Out</string>
    <string name="intro_title">What is Stunting?</string>

    <string name="stunting">Stunting</string>
    <string name="next">Next</string>
    <string name="definition_1">A condition where children are shorter than normal for their age due to chronic malnutrition.</string>
    <string name="definition_2">This could happen when they don’t get enough nutrition.</string>
    <string name="card_image">Card Image</string>
    <string name="card_title">Card Title</string>

    <!-- Facts -->
    <string name="facts">Facts</string>
    <string name="facts_definition">Stunting rate in Indonesia remains high, with the 2023 Indonesia Health Survey (SKI) reporting a rate of 21.5%</string>
    <string name="facts_definition2">Even before COVID-19, Indonesia faced high levels of malnutrition. Currently, more than two million children suffer from severe wasting, and more than seven million children under-5 are stunted</string>

    <!-- Crucial Issue -->
    <string name="crucial_issue">Crucial Issue</string>
    <string name="issue_definition">Limited awareness and knowledge regarding stunting prevention</string>
    <string name="issue_definition2">Lack of Standardization in Growth and Nutrition Metrics</string>
    <string name="issue_definition3">Limited Accessibility to Stunting-Related Information</string>
    <string name="issue_definition4">High Prevalence of Stunting in Indonesia</string>

    <!-- Nourish Fragment -->
    <string name="provide">What We Provide</string>
    <string name="nourish_definition1">Detect Early Signs of Stunting</string>
    <string name="nourish_definition2">Personalized Food Recommendation</string>
    <string name="nourish_definition3">Journal feature for documentation</string>
    <string name="nourish_definition4">News information about Stunting</string>
    <string name="nourish_button">Explore Nourish</string>

    <!-- Strings for news activity -->
    <string name="back">Back</string>
    <string name="web_view_created">Enjoy reading!</string>

    <!-- Profile Page strings -->
    <string name="username_profile">%1$s</string>
    <string name="email_profile">%1$s</string>
    <string name="logout">Logout</string>
    <string name="profile_menu">Menu Profile</string>
    <string name="copyright">Copyright © 2024 Nourish</string>

    <!-- Strings for journal page   -->
    <string name="add_journal">Add Journal</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="description_empty">Please fill in the form</string>
    <string name="upload">Upload</string>
    <string name="success_upload_alert">Journal created</string>
    <string name="failed_upload_alert">Journal creation failed</string>
    <string name="image_error">Error getting image</string>
    <string name="empty_journal">There is no journal at the moment</string>

    <!-- journal detail -->
    <string name="my_journal">My Journal</string>
    <string name="journal_date">20 November 2024 – 10:15 AM</string>
    <string name="to_journal_list">History</string>

    <!-- Strings for history page   -->
    <string name="history_sub_title">Stunting Analyze Result</string>
    <string name="empty_history">Analyze history is still empty</string>
    <string name="chart_failed">No data available</string>
    <string name="chart_title">Child Data</string>
    <string name="history_title">Prediction History</string>
    <string name="detail">Detail</string>

    <!-- String for permission   -->
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>

    <!-- Profile Action Items -->
    <string name="action_title">Action</string>
    <string name="profile_item_account">Account</string>
    <string name="profile_item_language">Language</string>
    <string name="profile_item_reminder">Reminder</string>
    <string name="profile_item_journal">Journal</string>
    <!-- Strings for user detail       -->
    <string name="unknown_user">Unknown User</string>
    <string name="unknown_email">Unknown Email</string>
    <string name="unknown_password">Unknown Password</string>

    <!-- Strings for stunting classification   -->
    <string name="stunting_analyze">Stunt Analyze</string>
    <string name="stunt_page_title">Check your stunt</string>
    <string name="tv_fill_in_form">Please fill in this form below!</string>
    <string name="age">Age (month)</string>
    <string name="height">Height (cm)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="analyze">Analyze</string>
    <string name="invalid_input">Invalid Input</string>

    <!-- Result String    -->
    <string name="result">Result: %1$s</string>
    <string name="severely_stunted">Severely Stunted</string>
    <string name="stunted">Stunted</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="unknown">Result Unknown</string>
    <string name="save_instruction">Click save\nto get food recommendation</string>

    <string name="food_rec">Food Recommendation</string>
    <!-- Result Stunting Activity  -->
    <string name="stunting_result_title">Result</string>
    <string name="user_data">Your Data:</string>
    <string name="user_age">Age (month): %d</string>
    <string name="user_height">Height (cm): %.1f</string>
    <string name="user_gender">Gender: %1$s</string>
    <string name="unknown_gender">Unknown Gender</string>

    <string name="result_desc">Result Description</string>
    <string name="severely_stunted_desc">Based on your data, we are %1$d%% confident that your nutritional status is classified as Severely Stunted. This suggests a significant lack of essential nutrients, affecting your growth and development. Immediate attention to a nutrient-dense diet is crucial to help reverse this condition and improve overall health.</string>
    <string name="stunted_desc">Based on your data, we are %1$d%% confident that your nutritional status is classified as Stunted. While growth has been slowed, with proper nutrition and care, you can make significant progress toward healthier development. Focus on a balanced diet with essential vitamins, minerals, and proteins to support growth.</string>
    <string name="normal_desc">Based on your data, we are %1$d%% confident that your nutritional status is classified as Normal. Your growth and development are on track, but continued attention to a balanced, nutrient-rich diet will ensure you stay healthy and strong. Keep up the good work with a varied diet that supports overall well-being.</string>
    <string name="high_desc">Based on your data, we are %1$d%% confident that your nutritional status is classified as High. This indicates that your body is receiving more than sufficient nutrients for growth and development. Maintaining a balanced approach to nutrition will help prevent any future imbalances while sustaining good health.</string>
    <string name="unknown_desc">Description Unknown</string>

    <string name="save">Save</string>
    <string name="up_predict_success_title">Prediction Saved</string>
    <string name="up_predict_failed_title">Failed to Saved Prediction</string>
    <string name="success_up_predict_reply">Done</string>
    <string name="get_food">Get Food Recommendation</string>
    <string name="empty_food">Food Recommendation is not available at the moment</string>

    <string name="category_label">Category: %1$s</string>
    <string name="food_label">Food: %1$s</string>
    <string name="serving_size_label">Serving Size: %1$s (g)</string>
    <string name="calories_label">Calories: %1$s</string>
    <string name="protein_label">Protein: %1$s (g)</string>
    <string name="fats_label">Fats: %1$s (g)</string>
    <string name="vitamin_a_label">Vitamin A: %1$s (IU)</string>
    <string name="vitamin_c_label">Vitamin C: %1$s (mg)</string>
    <string name="vitamin_d_label">Vitamin D: %1$s (IU)</string>
    <string name="vitamin_e_label">Vitamin E: %1$s (mg)</string>
    <string name="vitamin_b1_label">Vitamin B1: %1$s (mg)</string>
    <string name="vitamin_b2_label">Vitamin B2: %1$s (mg)</string>

    <!-- Notification Strings -->
    <string name="notification_channel_id">monthly_notification_channel</string>
    <string name="notification_channel_name">Monthly Notification</string>
    <string name="notification_channel_description">Channel for monthly reminders about stunting prevention</string>
    <string name="notification_title">Nourish Monthly Reminder</string>
    <string name="notification_content">It\'s a new day! Don\'t forget to scan and maintain your diet!</string>

    <string name="tflite_is_not_initialized_yet">Model is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">Interpreter is not loaded yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
