<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="10dp"
    android:backgroundTint="#F2F2F2"
    android:elevation="16dp"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:fontFamily="@font/poppins_extra_bold"
            android:textColor="@color/deep_blue"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_category"/>

        <TextView
            android:id="@+id/tv_serving_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serving_size_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_food"/>

        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_serving_size"/>

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protein_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_calories"/>

        <TextView
            android:id="@+id/tv_fats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fats_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_protein"/>

        <TextView
            android:id="@+id/tv_vitamin_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_a_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_fats"/>

        <TextView
            android:id="@+id/tv_vitamin_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_c_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_vitamin_a"/>

        <TextView
            android:id="@+id/tv_vitamin_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_d_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_vitamin_c"/>

        <TextView
            android:id="@+id/tv_vitamin_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_e_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_vitamin_d"/>

        <TextView
            android:id="@+id/tv_vitamin_b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b1_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_vitamin_e"/>

        <TextView
            android:id="@+id/tv_vitamin_b2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_b2_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_vitamin_b1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>