<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment" >

    <FrameLayout
        android:id="@+id/page_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:background="@drawable/rounded_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/deep_blue"
                android:text="@string/greet_user"
                android:fontFamily="@font/poppins_extra_bold"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/iv_nourish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/nourish_logo"/>

            <TextView
                android:id="@+id/app_motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_greet"
                app:layout_constraintTop_toBottomOf="@id/tv_greet"
                android:textColor="@color/deep_blue"
                android:text="@string/nourish_motto"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/child_icon"
                android:src="@drawable/ic_child"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/app_motto"
                app:layout_constraintTop_toBottomOf="@id/tv_greet"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>